# TYUT_AutoLogin

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  startup.sh
install/: install_aarch64_Linux.sh  install_amd64_Linux.sh
