[tool.poetry]
name = "auto-login"
version = "2.0.0"
description = "auto login TYUT web"
authors = ["Octopustank <2745865945@qq.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
selenium = "4.9.1"
PyVirtualDisplay = "^3.0"
pylint = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
